[package]
name = "pool-monitor"
version = "0.1.0"
authors = ["Thomas Christensen <thomas@chrstnsn.dk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = {version = "1.0.0"}

esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32", "embedded-hal" ] }
esp-println = { version = "0.9.1", features = ["esp32", "log"] }
esp-wifi = { version = "0.6.0", features = ["esp32", "wifi", "log", "dhcpv4", "dns", "ipv4"]}

heapless = "0.8.0"

log = { version = "0.4.21" }

smoltcp = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }

# see https://github.com/sjm42/esp32temp for a very similar project
ds18b20 = { git = "https://github.com/sjm42/ds18b20" }
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
