[package]
name = "pool-monitor"
version = "0.1.0"
authors = ["Thomas Christensen <thomas@chrstnsn.dk>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "1.0.0" }

embassy-sync = "0.5.0"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = [
  "tcp",
  "udp",
  "dhcpv4",
  "medium-ip",
] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }

esp-backtrace = { version = "0.13.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.17.0", features = ["esp32", "embedded-hal", "async", "embassy", "embassy-time-timg0", "embassy-executor-thread"] }
esp-println = { version = "0.10.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.5.0", features = ["esp32", "wifi", "embassy-net"] }

heapless = "0.8.0"

log = { version = "0.4.22" }

ryu = "1.0"
numtoa = "0.2.4"

smoltcp = { version = "0.11.0", default-features = false, features = [
  "medium-ethernet",
  "socket-raw",
] }
static_cell = "2.0.0"

# see https://github.com/sjm42/esp32temp for a very similar project
ds18b20 = { git = "https://github.com/sjm42/ds18b20" }
one-wire-bus = { git = "https://github.com/sjm42/one-wire-bus" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
